--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,16 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
-{% if site.url contains "builtable.co" %}  
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PD7V8GP');</script>
-<!-- End Google Tag Manager -->
-{% endif %}
-
+{% include gtm-head.html %}  
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,12 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../assets/images/apple-touch-icon.png">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 
 </head>
 
@@ -65,37 +51,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     
-    {% if site.url contains "builtable.co" %}
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PD7V8GP"
-height="0" width="0" ></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-{% endif %}
-
+{% include gtm-body.html %}
 {% include navheader.html %}
 
 
-   {{ content }}
+{{ content }}
    
-   {% include floating-hotkeys.html %}
-    {% include footer.html %}
+{% include floating-hotkeys.html %}
+{% include footer.html %}
+{%include scripts.html %}
 
-
-   
-
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
-    <!-- Scrolling Nav JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/scrolling-nav.js"></script>
-    <script src="../js/main.js"></script>
-    {% if page.url contains "/coworking/" %}
-    <script src="../js/payment.js"></script>
-    {% endif %}
-    <script src="../js/learn.js"></script>
 </body>
 
 </html>
