--- a/_includes/paymentModal.html
+++ b/_includes/paymentModal.html
@@ -1,6 +1,6 @@
 
 
-
+<!-- AfterPayment Modal -->
 <div class="modal fade" id="paymentModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -29,6 +29,7 @@
 </div>
 <!-- /.modal -->
 
+<!-- AfterPayment Modal -->
 <div class="modal fade" id="afterPaymentModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -57,7 +58,7 @@
     </div>
     <!-- /.modal -->
 
-
+<!-- Gcash Modal -->
     <div class="modal fade" id="gcashModal"  tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -85,3 +86,49 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
+
+
+    <!-- Bank Deposit Modal -->
+<div class="modal fade" id="bankDepositModal" tabindex="-1" role="dialog" aria-labelledby="bankDepositModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">4 Easy Steps to Bank Transfer!</h4>
+        </div>
+        <div class="modal-body">
+          <ol>
+              <li>Deposit ₱{{page.earlyPrice}} per head to our <strong>BDO</strong> or <strong>Metrobank</strong> bank account: 
+                  <br>
+                  <p><strong>Metrobank Account Name:
+                        CTT.Synergy Corporation
+                        <br>
+                        Metrobank Acct No.:
+                        0007881000616</strong></p>
+                    <p>
+                        <p>
+                            <strong>
+                                    BDO Account Name:
+                                    CTT.Synergy Corporation
+                                    <br>
+                                    BDO Acct No.:
+                                    000668083218
+                            </strong>
+                        </p>
+            
+              </li>
+              <li>
+                  Take a picture of the Deposit Slip!
+              </li>
+              <li>Email to <a href="mailto:connect@builtable.co">connect@builtable.co</a> 
+                or <a href="https://m.facebook.com/messages/compose?ids=167600830348313" target="_new">FB Message</a> 
+                a copy of the Bank Deposit Slip.</li>
+              <li>Wait for our reply for the confirmation, and you're all set!</li>
+
+            </ol>
+                <button type="button" data-dismiss="modal" class="btn btn-primary">Got it!</button>
+        </div>
+        
+      </div>
+    </div>
+  </div>
