--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -15,7 +15,7 @@
        <!-- For Facebook -->
 <meta property="og:title" content="{{page.pageTitle}}" />
 <meta property="og:image" content="{{page.imageUrl}}" />
-<meta property="og:description" content="{{page.content | truncate: 195}}" />
+<meta property="og:description" content="{{page.content | truncate: 195 | strip_html}}" />
 
 
 
