-fixed mobileimage workshop -updated prices

--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -15,7 +15,7 @@
 
 
 <div class="workshop-page bg-img desktop-only" style="background-image: url(..{{page.imageUrl}}/main.jpg)"></div>
-<img src="{{page.imageUrl}}/main-sm.jpg" class="img-responsive mobile-only"/>
+<img src="{{page.imageUrl}}/main-sm.jpg" class="img-responsive mobile-only workshop-small-img"/>
 <div class="workshop-title">
     <div class="container">
         <span class="breadcrumbs">
